--- a/Airtable.EFCore/Airtable.EFCore.csproj
+++ b/Airtable.EFCore/Airtable.EFCore.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Airtable" Version="1.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
