--- a/Airtable.EFCore/Airtable.EFCore.csproj
+++ b/Airtable.EFCore/Airtable.EFCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>Ivy.Airtable.EFCore</PackageId>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -10,7 +10,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Version>1.9.0.0</Version>
-    <RepositoryUrl>https://github.com/uaresponders/Airtable.EFCore</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Ivy-Interactive/Ivy.Airtable.EFCore</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
@@ -24,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy.Airtable" Version="1.6.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1" />
+    <PackageReference Include="Airtable" Version="1.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
