--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -1,48 +1,48 @@
-name: Publish NuGet
+name: Publish NuGet Packages
 
 on:
-  push:
-    branches: [ "main" ]
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [published]
+
+env:
+  NUGET_SOURCE: ${{ vars.NUGET_SOURCE || 'https://api.nuget.org/v3/index.json' }}
 
 jobs:
-  build-pack:
+  publish:
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 10.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build -c Release --no-restore
-    - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal
-    - name: publish
-      run: dotnet pack -c Release ./Airtable.EFCore/Airtable.EFCore.csproj --no-build --verbosity normal --output ./obj/output
-    - name: Publish artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: package
-        path: './obj/output'
-  publish-nuget:
-    runs-on: ubuntu-latest
-    needs: build-pack
-    if: github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v')
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: package
-        path: './obj/output'
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 10.0.x
-    - name: Push generated package to Nuget.org
-      run: dotnet nuget push ./obj/output/*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
-      env:
-        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      - name: Validate required secrets
+        run: |
+          if [ -z "${{ secrets.NUGET_API_KEY }}" ]; then
+            echo "::error::NUGET_API_KEY secret is not set. Please configure it in repository secrets."
+            exit 1
+          fi
+          echo "✓ NuGet token is configured"
+          echo "✓ Publishing to: ${{ env.NUGET_SOURCE }}"
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '10.0.x'
+
+      - name: Set version from release tag
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build Ivy.Airtable.EFCore
+        run: dotnet build Airtable.EFCore/Airtable.EFCore.csproj --configuration Release --no-restore /p:Version=$VERSION
+
+      - name: Pack Ivy.Airtable.EFCore
+        run: dotnet pack Airtable.EFCore/Airtable.EFCore.csproj --configuration Release --no-build --output ./artifacts /p:Version=$VERSION
+
+      - name: Publish to NuGet
+        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source ${{ env.NUGET_SOURCE }} --skip-duplicate
